# maze_navigating_robot

./: CMakeLists.txt  README.md  map.pgm  map.yaml  map_ours.pgm  package.xml
imageTuning/: blockDetection.py  colourPicker.py  colourPickerROS.py
launch/: ar_group_project_2.launch  ar_group_project_2.world  mapping.launch  real.launch
src/: block_detection.cpp  block_detection.h  brick_search.cpp  brick_search.h  main copy.cpp  main.cpp  turtle_follow.cpp  turtle_follow.h
src/archive/: block_detection.h
tom_big_dumb/: jokes.txt
