<?xml version="1.0"?>
<package>
  <name>turtle_follow</name>
  <version>1.0.0</version>
  <description>turtle_follow</description>


  <maintainer email="himavaan.chandra@student.uts.edu.au">Himavaan Chandra</maintainer>
  <author email="himavaan.chandra@student.uts.edu.au">Himavaan Chandra</author> 
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
